# Asteroids-Clone

./: CMakeLists.txt  README.md
include/: Consts.hpp  GameObject.hpp  MathHelper.hpp  Player.hpp  Quad.hpp  SdlWindow.hpp  Vector2.hpp
src/: GameObject.cpp  MathHelper.cpp  Player.cpp  Quad.cpp  SdlWindow.cpp  Vector2.cpp  main.cpp
